# denspp.offline

./: .devenv.flake.nix  .gitattributes  .gitignore  CITATION.cff  README.md  config.m  config.yml  config_data.mat  devenv.nix  environment.yml  main.m  main.py  main_data_merge.py  main_dnn_train.py  main_pipeline.py  pyproject.toml  run_tests.py
3_Python/: .gitignore  Data.mat  ModelComparison.ipynb  Update_project.py  access_cloud.yaml  main.py  main_ai.py  main_ai_ae.py  main_ai_ae_class.py  main_ai_autoencoder.py  main_ai_dae.py  main_ai_fcn_train.py  main_ai_rgc.py  main_ai_sda.py  main_data.py  main_data_ae.py  main_data_merge.py  main_data_sda.py  main_decoder.py  main_dnn_combi.py  main_dnn_train.py  main_emg.py  main_fpga.py  main_noiseSTD_SNR_ratio.py  main_pipeline.py  main_sda.py  plotData.m  processing_data.py  pyproject.toml  requirements.txt  settings.py  settings_ai.py  test.py  write_config_files.py
3_Python/0_DataAnalyzing/: analyseSpikeData_v2.m
3_Python/0_checkMATLAB/: changeDenoisingData.m  plotData.m
3_Python/data/: 2023-04-17_Dataset01_SimDaten_Martinez2009.mat  2023-05-15_Dataset01_SimDaten_Martinez2009.mat  2023-05-16_Dataset01_SimDaten_Martinez2009.mat  2023-05-16_DatasetTest.mat  2023-06-30_Dataset03_SimDaten_Quiroga2020.mat  2023-06-30_Dataset03_SimDaten_Quiroga2020_Sorted.mat  denoising_dataset_File1.mat  denoising_dataset_File1_Sorted.mat  denoising_dataset_File3_Sorted.mat
3_Python/experiments/: sda_handler.py  sda_main.py  sda_pipeline.py
3_Python/figures/: 20221216_TrainingResults_PyTorch.eps  20221222_TrainingResults_PyTorch.eps  20230110_TrainingResults_PyTorch.eps  20230111_TrainingResults_PyTorch.eps  20230113_TrainingResults_PyTorch.eps  20230114_TrainingResults_PyTorch.eps  20230123_TrainingResults_PyTorch.eps  20230124_TrainingResults_PyTorch.eps  20230130_TrainingResults_PyTorch.eps  20230315_TrainingResults_PyTorch.eps  20230316_TrainingResults_PyTorch.eps  20230316_cnn_dae_v2_TrainTF.eps  20230316_dnn_dae_v2_TrainTF.eps
3_Python/figures_fcn/: 20230110_TrainingResults_PyTorch.eps  20230111_TrainingResults_PyTorch.eps  20230112_TrainingResults_PyTorch.eps
3_Python/logs/: 2023-03-15_predicted_data.mat  2023-03-16_predicted_data.mat  20230316-000000_cnn_dae_v2.mat  20230316-000000_dnn_dae_v2.mat  plot_results.m
3_Python/matlab_analyzer/: analyseSpikeData_v1.m  analyseSpikeData_v2.m
3_Python/models/: Test_20230404_153032  ae_topology.py  ae_topology_embedded.py  denoising_autoencoder_v0_PyTorch  dnn_dae_v1_20230405_121638  dnn_dae_v1_20230405_122716  dnn_dae_v1_20230405_141921  dnn_dae_v1_20230409_152832  dnn_dae_v1_20230409_153807  dnn_dae_v1_20230409_154231  dnn_dae_v1_20230409_154306  dnn_dae_v1_20230409_154342  dnn_dae_v1_20230409_154534  dnn_dae_v1_20230409_160049  dnn_dae_v1_20230409_161032  dnn_dae_v1_20230409_163509  dnn_dae_v2_20230404_153933  dnn_dae_v2_20230404_154001  dnn_dae_v2_20230404_155339  dnn_dae_v2_20230404_161950  dnn_dae_v2_20230404_162911  dnn_dae_v2_20230404_163830  dnn_dae_v2_20230404_163913  dnn_dae_v2_20230404_163948  dnn_dae_v2_20230404_164032  dnn_dae_v2_20230404_164351  dnn_dae_v2_20230404_164616  dnn_dae_v2_20230404_164948  dnn_dae_v2_20230404_165449  dnn_dae_v2_20230404_180613  dnn_dae_v2_20230404_181008  dnn_dae_v2_20230404_182039  dnn_dae_v2_20230404_182832  dnn_dae_v2_20230404_183352  dnn_dae_v2_20230404_184153  dnn_dae_v2_20230404_184405  dnn_dae_v2_20230404_184755  dnn_dae_v2_TEST2_PyTorch
3_Python/new/: decision_tree.py  pyspice.py  test_lfp.py
3_Python/package/: __init__.py  data_call.py  data_load.py  logger.py  metric.py  nsp.py  pipeline_cmds.py  pipeline_signal.py  pipeline_signals.py  plotting.py  signal_analyse.py  signal_gen.py  structure_builder.py  template_function.py  yaml_handler.py
3_Python/pipeline/: pipeline_data.py  pipeline_emg.py  pipeline_nev.py  pipeline_signals.py  pipeline_v1.py  pipeline_v2.py
3_Python/src/: adc.py  afe.py  call_data.py  clustering.py  dae_topology.py  data_call.py  data_call_emg.py  dsp.py  feature_extraction.py  fec.py  fpga_transfer.py  metric.py  nsp.py  pipeline.py  pipeline_signals.py  plotting.py  preamp.py  processing_noise.py  pytorch_handler.py  read_KlaesFiles.py  sda.py  signal_gen.py
3_Python/src_MEArec/: Recordes Generation.py  Tempelate Generation.py
3_Python/src_ai/: ae_dataset.py  ae_topology.py  ae_topology_embedded.py  bae_dataset.py  class_dataset.py  dae_dataset.py  dae_topology.py  dae_topology_embedded.py  data_augmentation.py  data_preprocessing.py  dataset.py  dataset_preparation.py  nn_pytorch.py  nn_tensorflow.py  nn_tensorflow_fcn.py  nnpy_architecture.py  nntf_architecture.py  nntf_fcn.py  plotting.py  process_klaes_files.py  processing.py  processing_data.py  processing_noise.py  pytorch_handler.py  read_KlaesFiles.py  sda_dataset.py  sda_topology.py
3_Python/src_data/: cell_names.py  generate_folder.py  merge_datasets.m  merge_datasets.py  merge_datasets_frames.py  merge_datasets_matlab.m  merge_datasets_matlab_visual.m  merge_datasets_sda.py  merge_klaes_files.py  merge_rgc_onoff_fzj.py  pipeline_data.py  process_klaes_files.py  process_neuropixel.py  process_utah.py  processing_data.py  read_KlaesFiles.py  rgc_logic_combination.py  rgc_tdb_plots.py
3_Python/src_decoder/: data.mat  pipeline_nev.py  plotting.py  settings.py
3_Python/src_dnn/: src_pytorch_handler.py  train_ae.py  train_ae_cl_sweep.py  train_ae_cl_sweep_plot.py  train_ae_class.py  train_ae_class_evaluation.py  train_ae_noise_ratio.py  train_decoder_utah.py  train_gki.py  train_mnist.py  train_rgc.py  train_rgc_ae_cl.py  train_rgc_class.py  train_sda.py
3_Python/src_emg/: call_emg.py  data_call_emg.py  pipeline_emg.py  plotting_emg.py
3_Python/src_fpga/: filter_fir_all_c.py  filter_fir_all_verilog.py  filter_fir_c.py  filter_fir_verilog.py  filter_iir_c.py  filter_iir_verilog.py  filter_mavg_c.py  filter_mavg_verilog.py  main_fpga.py  transfer_data_verilog.py  translate_timeseries_verilog.py  waveform_lut_c.py  waveform_lut_verilog.py
3_Python/src_gui/: main_gui.py  setup_gui.py  usb_serial.py
3_Python/src_impfit/: run_modes.py  (+4 more)
(+1460 files in other folders)
