[build-system]
requires = ["hatchling", "hatch-vcs",  "wheel"]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "vcs"


[tool.hatch.build.targets.sdist]
where = ["."]
include = ["denspp"]  
exclude = ['example', 'docs', '**/*_test.py']
namespaces = false

[tool.hatch.build.targets.wheel]
packages = ["denspp"]
exclude = ['example', 'docs', '**/*_test.py']
only-packages = true


[project]
name = "denspp.offline"
dynamic = ["version"]
description = "Python Framework for End-To-End and Hardware-Aware Signal Processing"
readme = "README.md"
license =  {file = "LICENSE"}
requires-python = ">=3.12"
keywords = ["machine learning", "signal processing", "end-to-end", "offline data analysis", "biosignal processing"]
authors = [
  {name = "Andreas Erbsloeh", email = "andreas.erbsloeh@uni-due.de"},
]
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "pyocclient>=0.6",
    "pyspice>=1.5",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "pyxdf>=1.16.8",
    "elasticai-creator",
    "nc-py-api>=0.19.2",
    "fxpmath>=0.4.9",
]


[tool.uv]
default-groups = ["dev", "docs"]


[tool.uv.sources]
elasticai-creator = { git = "https://github.com/es-ude/elastic-ai.creator.git"}
sphinxcontrib-wavedrom = { git = "https://github.com/glencoe/sphinx-wavedrom.git", rev = "hotfix_html_only_version" }


[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "hatch>=1.14.0",
    "hatch-vcs>=0.4.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "tach>=0.23.0",
    "coverage>=7.6.9"
]
docs = [
    "sphinx>=8.1.3",
    "furo>=2024.8.6",
    "sphinx-autoapi>=3.4.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-prompt>=1.9.0",
    "sphinxcontrib-plantuml>=0.30",
    "myst-parser>=4.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "linkify>=1.4",
    "linkify-it-py>=2.0.3",
    "sphinx-autodoc2>=0.5.0",
    "sphinxext-opengraph>=0.9.1",
    "sphinxcontrib-kroki>=1.3.0",
    "sphinxcontrib-wavedrom>=3.0.4",
    "zundler>=0.2.2",
    "sphinx-book-theme>=1.1.3",
    "sphinx-togglebutton>=0.3.2",
    "htmlark[http,parsers]>=1.0.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-design>=0.6.1",
]
