[build-system]
requires = ["hatchling", "hatch-vcs",  "wheel"]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "vcs"


[tool.hatch.build.targets.sdist]
where = ["."]
include = ["denspp"]  
exclude = ['example', 'docs', '**/*_test.py']
namespaces = false


[tool.hatch.build.targets.wheel]
packages = ["denspp"]
exclude = ['example', 'docs', '**/*_test.py']
only-packages = true


[project]
name = "denspp.offline"
dynamic = ["version"]
description = "Python Framework for End-To-End and Hardware-Aware Signal Processing"
readme = "README.md"
license =  {file = "LICENSE"}
requires-python = ">=3.12"
keywords = ["machine learning", "signal processing", "end-to-end", "offline data analysis", "biosignal processing"]
authors = [
  {name = "Andreas Erbsloeh", email = "andreas.erbsloeh@uni-due.de"},
]
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "pyspice>=1.5",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
    "elasticai-creator",
    "fxpmath>=0.4.9",
    "pytest>=9.0.2",            # Just to fix error coming from cocotb in elasticai.creator
    "webdavclient3>=3.14.6",
    "urllib3>=2.6.2",
    "requests>=2.32.5",
]

[tool.uv]
default-groups = ["dev", "docs"]


[tool.uv.sources]
elasticai-creator = { git = "https://github.com/es-ude/elastic-ai.creator.git"}


[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "hatch>=1.14.0",
    "hatch-vcs>=0.4.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "tach>=0.23.0",
    "coverage>=7.11.3"
]
docs = [
    "myst-parser>=4.0.0",
    "sphinx>=8.1.3",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-prompt>=1.9.0",
    "sphinx-design>=0.6.1",
    "sphinx-togglebutton>=0.3.2",
    "sphinx-copybutton>=0.5.2",
    "sphinxext-opengraph>=0.9.1",
    "sphinxcontrib-mermaid>=1.0.0",
    "pydata-sphinx-theme>=0.16.1",
]
