[project]
name = "denspp.offline"
description = "Python Framework for End-To-End and Hardware-Aware Signal Processing"
readme = "README.md"
requires-python = ">=3.13, <3.14"
license-files = ["LICENSE"]
authors = [
  { name = "Andreas Erbsloeh", email = "andreas.erbsloeh@uni-due.de" },
]
keywords = [
  "biosignal processing",
  "end-to-end",
  "machine learning",
  "offline data analysis",
  "signal processing"
]
dependencies = [
  "elasticai-creator",
  "elasticai-preprocessor",
  "fxpmath>=0.4.9",
  "h5py>=3.16.0",
  "matplotlib>=3.9.2",
  "matplotlib>=3.9.2",
  "numpy>=1.26.4",
  "psutil>=7.2.2",
  "pyocclient>=0.6",
  "pyspice>=1.5",
  "pyyaml>=6.0.1",
  "scikit-learn>=1.5.2",
  "scipy>=1.14.1",
  "soundcard",
  "torchinfo>=1.8.0",
  "tqdm>=4.67.1",
  "umap-learn>=0.5.12",
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "build>=1.2.2.post1",
  "coverage>=7.11.3",
  "hatch>=1.14.0",
  "hatch-vcs>=0.4.0",
  "pip-audit>=2.10.1",
  "pre-commit>=4.0.1",
  "pytest>=9.0.3",
  "ruff>=0.15.14",
  "tach>=0.23.0",
  "tombi>=1.1.1",
  "ty>=0.0.38",
]
docs = [
  "myst-parser>=4.0.0",
  "pydata-sphinx-theme>=0.16.1",
  "sphinx>=8.1.3",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-autodoc2>=0.5.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinx-prompt>=1.9.0",
  "sphinx-togglebutton>=0.3.2",
  "sphinxcontrib-mermaid>=1.0.0",
  "sphinxext-opengraph>=0.9.1",
]
utils = ["mypy>=1.13.0", "ruff>=0.11.0", "ty>=0.0.32"]

[build-system]
requires = ["hatch-vcs", "hatchling", "wheel"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
where = ["."]
include = ["denspp"]
exclude = [
  ".venv",
  "build",
  "config",
  "data",
  "dataset",
  "docs",
  "example",
  "runs",
  "test",
  "temp_test",
  "**/*_test.py"
]
namespaces = false

[tool.hatch.build.targets.wheel]
packages = ["denspp"]
exclude = [
  ".venv",
  "build",
  "config",
  "data",
  "dataset",
  "docs",
  "example",
  "runs",
  "test",
  "temp_test",
  "**/*_test.py"
]
only-packages = true

[tool.pytest]
addopts = ["--import-mode=importlib"]
markers = [
  "simulatiuon: a test using third-party tools for simulation (needs packages or else)",
  "slow: a slow test that you would not run in tdd cycle"
]
minversion = "9.0"
python_files = ["*_test.py"]
pythonpath = ["."]
testpaths = ["denspp/offline/*"]

[tool.ruff]
include = [
  "pyproject.toml",
  "denspp/**/*.py",
  "example/*.pyi",
]

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  ".devenv",
]

# Same as Black.
line-length = 106
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["D101", "D102", "E741", "E721", "E722"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ty.src]
include = ["denspp/offline"]
exclude = [
  "denspp/offline/template",
  "denspp/offline/pipeline",
  "denspp/offline/dnn/**",
  "denspp/offline/analog/**",
  "denspp/offline/analog/dev_handler.py",
  "denspp/offline/analog/iv_polyfit.py",
  "denspp/offline/analog/pyspice_handler.py",
  "denspp/offline/data_call/call_handler.py",
  "denspp/offline/data_call/merge_datasets.py",
  "denspp/offline/metric/data_numpy.py",
  "denspp/offline/ml/cluster.py",
  "denspp/**/*_test.py"
]

[tool.coverage.run]
source = ["denspp"]
omit = [
    "**/*_test.py",
    "**/template/*.py",
    "**/plot_*.py",
    "**/player/*"
]

[tool.uv]
default-groups = ["dev", "docs", "utils"]

[tool.uv.sources]
elasticai-creator = { git = "https://github.com/es-ude/elastic-ai.creator.git", branch = "main" }
elasticai-preprocessor = { git = "https://github.com/es-ude/elastic-ai.preprocessor.git", branch = "main" }
soundcard = { git = "https://github.com/bastibe/SoundCard.git", branch = "master" }
