[project]
name = "denspp.offline"
version = "0.1.0"
description = "Python API for analysing extracellular recordings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fxpmath>=0.4.9",
    "impedancefitter>=2.0.11",
    "mat73>=0.65",
    "matplotlib>=3.9.2",
    "neo>=0.13.2",
    "numpy>=2.1.3",
    "py-cpuinfo>=9.0.0",
    "pyocclient>=0.6",
    "pyspice>=1.5",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
